# bobtail

./: CHANGELOG.md  Cargo.toml  README.md
bobtail_proc/: Cargo.toml
bobtail_proc/src/: lib.rs
bobtail_proc_macros/: Cargo.toml  README.md
bobtail_proc_macros/src/: lib.rs
examples/: demo.rs
src/: lib.rs  tail_define.rs
tail_optional_macros_macros/: Cargo.toml
tail_optional_macros_macros/src/: lib.rs
tests/: attributes.rs  tail_define.rs  test_expand.rs  test_macro_export.rs  test_trace_macro.rs  trybuild.rs  warn_no_tail_bob.rs  warn_no_tail_define.rs
tests/ui/: define_vis_after_arrow.rs  define_vis_after_arrow.stderr  no_tail_default.rs  no_tail_default.stderr  pass_attr_impl.rs  pass_proto.rs  pass_sset.rs  pub_macro_export.rs  pub_macro_export.stderr  pub_macro_export_define.rs  pub_macro_export_define.stderr  pub_macro_export_manual.rs  pub_macro_export_manual.stderr  pub_macro_no_use.rs  raw_missing_expr.rs  raw_missing_expr.stderr  test_manual_macro_export.rs  test_manual_macro_export.stderr  too_many_optionals.rs  too_many_optionals.stderr  warn_no_tail_bob.rs  warn_no_tail_bob.stderr  warn_no_tail_define.rs  warn_no_tail_define.stderr
tests/ui/omit-token/: too_many_optionals.stderr
