[package]
name = "bobtail"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macro generator for functions with trailing `Default` and `From<T>` parameters"

[workspace]
members = ["bobtail_proc_macros"]

[lib]
path = "src/lib.rs"

[dependencies]
bobtail_proc_macros = { path = "bobtail_proc_macros" }

[dev-dependencies]
trybuild = "1"
