[package]
name = "bobtail"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate macro proxies of functions whose tails can be \"bobbed\" as in cut off"
authors = ["Shane Celis <shane.celis@gmail.com>"]
readme = "README.md"
repository = "https://github.com/shanecelis/bobtail"
keywords = [
    "optional-arguments",
    "default-arguments",
    "variadic",
    "proc-macro",
]
categories = [
    "development-tools::procedural-macro-helpers"
]

[workspace]
members = ["bobtail_proc_macros"]

[lib]
path = "src/lib.rs"

[dependencies]
bobtail_proc_macros = { version = "0.2.0", path = "bobtail_proc_macros" }

[dev-dependencies]
trybuild = "1"
