[package]
name = "bobtail"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate macro proxies of functions whose tails can be \"bobbed\" as in cut off"
authors = ["Shane Celis <shane.celis@gmail.com>"]
readme = "README.md"
repository = "https://github.com/shanecelis/bobtail"
keywords = [
    "optional-arguments",
    "default-arguments",
    "variadic",
    "proc-macro",
]
categories = [
    "development-tools::procedural-macro-helpers"
]

[workspace]
members = ["bobtail_proc_macros"]
[workspace.package]
version = "0.3.0"

[features]
default = []
# Enable `_` as a placeholder for default values in macro calls.
# This uses a recursive helper macro (__bobtail_munch!) internally.
omit-token = ["bobtail_proc_macros/omit-token"]

[lib]
path = "src/lib.rs"

[dependencies]
bobtail_proc_macros = { version = "0.3.0", path = "bobtail_proc_macros" }

[dev-dependencies]
trybuild = "1"
proc-macro2 = "1"
quote = "1"
version-sync = "0.9.5"
